add:添加debug信息 以及调试页面
